--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-electron": "0.1.7",
     "ember-export-application-global": "^1.0.4",
-    "ember-moment": "4.1.0"
+    "ember-moment": "4.1.0",
+    "ember-route-action-helper": "0.2.0"
   },
   "main": "app/electron.js",
   "dependencies": {
