--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "ace-build": "~1.2.2",
     "medium-editor": "~5.11.0",
     "moment": ">= 2.8.0",
-    "moment-timezone": ">= 0.1.0"
+    "moment-timezone": ">= 0.1.0",
+    "rangy": "~1.3.0",
+    "font-awesome": "~4.4.0"
   }
 }
