--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "ember-export-application-global": "^1.0.4",
     "ember-moment": "4.1.0",
     "ember-route-action-helper": "0.2.0",
-    "ember-trix-editor": "1.0.5"
+    "ember-scrollable": "0.1.1",
+    "ember-trix": "0.9.5"
   },
   "main": "app/electron.js",
   "dependencies": {
