--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
     "moment": ">= 2.8.0",
     "moment-timezone": ">= 0.1.0",
     "rangy": "~1.3.0",
-    "font-awesome": "~4.4.0"
+    "font-awesome": "~4.4.0",
+    "trackpad-scroll-emulator": "^1.0.8",
+    "trix": "^0.9.4"
   }
 }
