--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,9 @@
     "rangy": "~1.3.0",
     "font-awesome": "~4.4.0",
     "trackpad-scroll-emulator": "^1.0.8",
-    "trix": "^0.9.4"
+    "trix": "^0.9.4",
+    "pretender": "~0.10.1",
+    "lodash": "~3.7.0",
+    "Faker": "~3.0.0"
   }
 }
