--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-ic-ajax": "0.2.4",
     "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-mirage": "0.2.0-beta.1",
     "ember-cli-moment-shim": "0.7.1",
     "ember-cli-qunit": "^1.0.4",
     "ember-cli-release": "0.2.8",
@@ -41,6 +42,7 @@
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-electron": "0.1.7",
     "ember-export-application-global": "^1.0.4",
+    "ember-lodash": "0.0.5",
     "ember-moment": "4.1.0",
     "ember-route-action-helper": "0.2.0",
     "ember-scrollable": "0.1.1",
