--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ember-cli-sass": "^5.2.0",
     "ember-cli-sri": "^1.2.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-content-editable": "0.7.0",
     "ember-data": "1.13.15",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-electron": "0.1.7",
