--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ember-cli-babel": "^5.1.6",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.1.0",
-    "ember-cli-font-awesome": "1.3.0",
+    "ember-cli-font-awesome": "1.4.0",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-ic-ajax": "0.2.4",
@@ -49,6 +49,8 @@
   },
   "main": "app/electron.js",
   "dependencies": {
-    "electron-localshortcut": "^0.6.0"
+    "electron-localshortcut": "^0.6.0",
+    "ember-undo-stack": "^0.4.0",
+    "mkdirp": "^0.5.1"
   }
 }
