--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
     "ember-qunit": "0.4.16",
     "ember-qunit-notifications": "0.1.0",
     "ember-resolver": "~0.1.20",
-    "jquery": "^1.11.3",
+    "jquery": "1.11.3",
     "loader.js": "ember-cli/loader.js#3.4.0",
     "qunit": "~1.20.0",
     "ace-build": "~1.2.2",
@@ -18,7 +18,6 @@
     "rangy": "~1.3.0",
     "font-awesome": "~4.5.0",
     "trackpad-scroll-emulator": "^1.0.8",
-    "trix": "^0.9.4",
     "pretender": "~0.10.1",
     "lodash": "~4.0.0",
     "Faker": "~3.0.0"
