--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
     "ember-export-application-global": "^1.0.4",
     "ember-moment": "4.1.0",
     "ember-route-action-helper": "0.2.0",
-    "ember-scrollable": "0.1.1",
-    "ember-trix": "eguitarz/ember-trix#tmp"
+    "ember-scrollable": "0.1.1"
   },
   "main": "app/electron.js",
   "dependencies": {
     "electron-localshortcut": "^0.6.0",
     "ember-undo-stack": "^0.4.0",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "rsvp": "^3.1.0"
   }
 }
