--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,15 @@
 {
   "name": "denote",
   "dependencies": {
-    "ember": "2.2.0",
+    "ember": "~2.4.0",
     "ember-cli-shims": "0.0.6",
     "ember-cli-test-loader": "0.2.1",
-    "ember-data": "2.2.1",
+    "ember-data": "~2.4.0",
     "ember-load-initializers": "0.1.7",
     "ember-qunit": "0.4.16",
     "ember-qunit-notifications": "0.1.0",
     "ember-resolver": "~0.1.20",
-    "jquery": "^1.11.3",
+    "jquery": "1.11.3",
     "loader.js": "ember-cli/loader.js#3.4.0",
     "qunit": "~1.20.0",
     "ace-build": "~1.2.2",
@@ -19,8 +19,8 @@
     "font-awesome": "~4.5.0",
     "trackpad-scroll-emulator": "^1.0.8",
     "trix": "^0.9.4",
-    "pretender": "~0.10.1",
-    "lodash": "~4.0.0",
+    "pretender": "~0.12.0",
+    "lodash": "~3.7.0",
     "Faker": "~3.0.0"
   }
 }
