--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
     "electron-prebuilt": "0.35.2",
-    "ember-cli": "1.13.13",
+    "ember-cli": "1.13.15",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-content-security-policy": "0.4.0",
@@ -31,6 +31,7 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-ic-ajax": "0.2.4",
     "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-mirage": "0.2.0-beta.7",
     "ember-cli-moment-shim": "0.7.1",
     "ember-cli-qunit": "^1.0.4",
     "ember-cli-release": "0.2.8",
@@ -45,7 +46,10 @@
     "ember-moment": "4.1.0",
     "ember-route-action-helper": "0.2.0",
     "ember-scrollable": "0.1.1",
-    "ember-trix": "eguitarz/ember-trix#tmp"
+    "ember-trix": "eguitarz/ember-trix#tmp",
+    "ember-truth-helpers": "1.2.0",
+    "liquid-fire": "0.23.0",
+    "mirage": "0.0.5"
   },
   "main": "app/electron.js",
   "dependencies": {
