--- a/package.json
+++ b/package.json
@@ -21,12 +21,11 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
     "electron-prebuilt": "0.35.2",
-    "ember-cli": "1.13.15",
+    "ember-cli": "2.3.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.1.0",
-    "ember-cli-font-awesome": "1.4.0",
+    "ember-cli-font-awesome": "1.5.0",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-ic-ajax": "0.2.4",
@@ -38,17 +37,19 @@
     "ember-cli-sass": "^5.2.0",
     "ember-cli-sri": "^1.2.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-content-editable": "0.7.0",
     "ember-data": "1.13.15",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-electron": "0.1.7",
     "ember-export-application-global": "^1.0.4",
+    "ember-load-initializers": "^0.5.1",
+    "ember-mobiledoc-editor": "0.4.0",
     "ember-moment": "4.1.0",
+    "ember-resolver": "^2.0.3",
     "ember-route-action-helper": "0.2.0",
     "ember-scrollable": "0.1.1",
-    "ember-trix": "eguitarz/ember-trix#tmp",
     "ember-truth-helpers": "1.2.0",
     "liquid-fire": "0.23.0",
+    "loader.js": "^4.0.1",
     "mirage": "0.0.5"
   },
   "main": "app/electron.js",
