--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "lodash": "~3.7.0",
     "Faker": "~3.0.0",
     "froala-wysiwyg-editor": "~2.2.1",
-    "font-awesome": "~4.5.0"
+    "font-awesome": "~4.5.0",
+    "animation-frame": "~0.2.4"
   }
 }
