--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.2.0",
     "electron-prebuilt": "0.35.2",
+    "ember-async-image": "0.1.1",
     "ember-cli": "2.3.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
@@ -42,10 +43,14 @@
     "ember-electron": "0.1.7",
     "ember-export-application-global": "^1.0.4",
     "ember-load-initializers": "^0.5.1",
+    "ember-lodash": "0.0.6",
+    "ember-mobiledoc-dom-renderer": "0.4.1",
     "ember-mobiledoc-editor": "0.4.0",
+    "ember-mobiledoc-text-renderer": "0.3.0",
     "ember-moment": "4.1.0",
     "ember-resolver": "^2.0.3",
     "ember-route-action-helper": "0.2.0",
+    "ember-run-raf": "1.1.1",
     "ember-scrollable": "0.1.1",
     "ember-truth-helpers": "1.2.0",
     "liquid-fire": "0.23.0",
